seraphim/system/argocd/templates/argocd-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "argocd.apps.int.scarey.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
